.kubes/sorry-cypress/ns-sorrycypress.yml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: sorry-cypress
  name: sorry-cypress
