.kubes/sorry-cypress/deployment-api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: api
  name: api
  namespace: sorry-cypress
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: api
  strategy: {}
  template:
    metadata:
      labels:
        network.kubernetes.io/sorry-cypress: "true"
        app.kubernetes.io/name: api
    spec:
      containers:
        - env:
            - name: APOLLO_PLAYGROUND
              value: "false"
            - name: MONGODB_DATABASE
              value: sorry-cypress
            - name: MONGODB_URI
              value: mongodb://sorry-cypress:cypress-sorry@mongo:27017
          name: api
          image: agoldis/sorry-cypress-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 4000
          resources: {}
          readinessProbe:
            httpGet:
              path: /.well-known/apollo/server-health
              port: 4000
            periodSeconds: 5
            timeoutSeconds: 3
            successThreshold: 2
            failureThreshold: 5
      restartPolicy: Always
status: {}
