.kubes/sorry-cypress/deployment-createbuckets.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: createbuckets
  name: createbuckets
  namespace: sorry-cypress
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: createbuckets
  strategy: {}
  template:
    metadata:
      labels:
        network.kubernetes.io/sorry-cypress: "true"
        app.kubernetes.io/name: createbuckets
    spec:
      containers:
        - command:
            - /bin/sh
            - -c
            - ' sleep 3; /usr/bin/mc config host add myminio http://storage:9000 sorry-cypress cypress-sorry; /usr/bin/mc rm -r --dangerous --force myminio/sorry-cypress; /usr/bin/mc mb myminio/sorry-cypress; /usr/bin/mc anonymous set download myminio/sorry-cypress; /usr/bin/mc anonymous set public myminio/sorry-cypress; exit 0; '
          name: createbuckets
          image: minio/mc
          imagePullPolicy: Always
          resources: {}
      restartPolicy: Always
status: {}
