.kubes/sorry-cypress/deployment-dashboard.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: dashboard
  name: dashboard
  namespace: sorry-cypress
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: dashboard
  strategy: {}
  template:
    metadata:
      labels:
        network.kubernetes.io/sorry-cypress: "true"
        app.kubernetes.io/name: dashboard
    spec:
      containers:
        - env:
            - name: CI_URL
              value: ""
            - name: GRAPHQL_CLIENT_CREDENTIALS
              value: ""
            - name: GRAPHQL_SCHEMA_URL
              value: http://kube.local:4000
            - name: PORT
              value: "8080"
          name: dashboard
          image: agoldis/sorry-cypress-dashboard:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources: {}
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 2
            failureThreshold: 5
      restartPolicy: Always
status: {}
