.kubes/sorry-cypress/deployment-director.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: director
  name: director
  namespace: sorry-cypress
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: director
  strategy: {}
  template:
    metadata:
      labels:
        network.kubernetes.io/sorry-cypress: "true"
        app.kubernetes.io/name: director
    spec:
      containers:
        - env:
            - name: ALLOWED_KEYS
              value: secret_key
            - name: DASHBOARD_URL
              value: http://kube.local:8080
            - name: EXECUTION_DRIVER
              value: ../execution/mongo/driver
            - name: GITLAB_JOB_RETRIES
              value: "false"
            - name: INACTIVITY_TIMEOUT_SECONDS
              value: "600"
            - name: MINIO_ACCESS_KEY
              value: sorry-cypress
            - name: MINIO_BUCKET
              value: sorry-cypress
            - name: MINIO_ENDPOINT
              value: storage
            - name: MINIO_PORT
              value: "9000"
            - name: MINIO_SECRET_KEY
              value: cypress-sorry
            - name: MINIO_URL
              value: http://kube.local
            - name: MINIO_USESSL
              value: "false"
            - name: MONGODB_DATABASE
              value: sorry-cypress
            - name: MONGODB_URI
              value: mongodb://sorry-cypress:cypress-sorry@mongo:27017
            - name: PROBE_LOGGER
              value: "false"
            - name: SCREENSHOTS_DRIVER
              value: ../screenshots/minio.driver
          name: director
          image: agoldis/sorry-cypress-director:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 1234
          resources: {}
          readinessProbe:
            httpGet:
              path: /health-check-db
              port: 1234
            periodSeconds: 5
            timeoutSeconds: 3
            successThreshold: 2
            failureThreshold: 5
      restartPolicy: Always
status: {}
