.kubes/sorry-cypress/service-api.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: api
  name: api
  namespace: sorry-cypress
spec:
  type: NodePort
  ports:
    - name: http
      port: 4000
      protocol: TCP
      nodePort: 4000
      targetPort: 4000
  selector:
    app.kubernetes.io/name: api
status:
  loadBalancer: {}
