.kubes/sorry-cypress/service-dashboard.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: dashboard
  name: dashboard
  namespace: sorry-cypress
spec: 
  type: NodePort
  ports:
    - name: http
      port: 8080
      protocol: TCP
      nodePort: 8080
      targetPort: 8080
  selector:
    app.kubernetes.io/name: dashboard
status:
  loadBalancer: {}
