.kubes/sorry-cypress/service-director.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: director
  name: director
  namespace: sorry-cypress
spec:
  type: NodePort
  ports:
    - name: http
      port: 1234
      protocol: TCP
      nodePort: 1234
      targetPort: 1234
  selector:
    app.kubernetes.io/name: director
status:
  loadBalancer: {}
