.kubes/sorry-cypress/service-mongo.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: mongo
  name: mongo
  namespace: sorry-cypress
spec:
  type: NodePort
  ports:
    - name: "mongodb"
      port: 27017
      protocol: TCP
      nodePort: 27017
      targetPort: 27017
  selector:
    app.kubernetes.io/name: mongo
status:
  loadBalancer: {}
