.kubes/sorry-cypress/service-storage.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: storage
  name: storage
  namespace: sorry-cypress
spec: 
  type: NodePort
  ports:
    - name: console
      port: 9000
      protocol: TCP
      nodePort: 9000
      targetPort: 9000
    - name: http
      port: 9090
      protocol: TCP
      nodePort: 9090
      targetPort: 9090
  selector:
    app.kubernetes.io/name: storage
status:
  loadBalancer: {}
