.kubes/sorry-cypress/np-sorrycypress.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: sorry-cypress
  namespace: sorry-cypress
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              network.kubernetes.io/sorry-cypress: "true"
  podSelector:
    matchLabels:
      network.kubernetes.io/sorry-cypress: "true"
